tests/ui/consts/const-eval/issue-65394.stock.stderr
error[E0493]: destructor of `Vec<i32>` cannot be evaluated at compile-time
  --> $DIR/issue-65394.rs:12:9
   |
LL |     let mut x = Vec::<i32>::new();
   |         ^^^^^ the destructor for this type cannot be evaluated in constants
...
LL | };
   | - value is dropped here
   |
   = note: see issue #133214 <https://github.com/rust-lang/rust/issues/133214> for more information
   = help: add `#![feature(const_destruct)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0493`.
